syntax = "proto3";

package gateway.v1;

option go_package = "github.com/ApeironFoundation/axle/contracts/generated/go/gateway/v1;gatewayv1";

import "google/protobuf/timestamp.proto";

// EventType enumerates all real-time events the Gateway emits.
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_TASK_CREATED = 1;
  EVENT_TYPE_TASK_UPDATED = 2;
  EVENT_TYPE_TASK_DELETED = 3;
  EVENT_TYPE_AI_CHUNK = 4;
  EVENT_TYPE_AI_DONE = 5;
}

// Event is a single server-push event delivered to the frontend.
message Event {
  string id = 1;
  EventType type = 2;
  string project_id = 3;
  bytes payload = 4;
  google.protobuf.Timestamp occurred_at = 5;
}

// SubscribeRequest allows filtering events by project and type.
message SubscribeRequest {
  // project_ids filters events; empty means all accessible projects.
  repeated string project_ids = 1;
  // event_types filters which event types to receive; empty means all.
  repeated EventType event_types = 2;
}

// ── Service ───────────────────────────────────────────────────────────────────

// StreamingService is exposed by the Gateway for real-time event delivery.
service StreamingService {
  // Subscribe opens a long-lived server-stream of Events.
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Subscribe(SubscribeRequest) returns (stream Event);
}
